# roomba-player

./: .env.example  .env.rpi.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  context.md
examples/: salon.yaml
scripts/: deploy_rpi.sh  stop_rpi.sh
src/roomba_player/: __init__.py  app.py  aruco.py  camera.py  config.py  history.py  odometry.py  plan.py  roomba.py  telemetry.py  ws.py
src/roomba_player/web/: home.html  player.html
src/roomba_player/web/static/: home.css  player-aruco.js  player-camera.js  player-controls.js  player-main.js  player-map.js  player-state.js  player-telemetry.js  player-utils.js  player.css
tests/: test_aruco_snap.py  test_health.py  test_odometry.py  test_plan.py  test_roomba_stream.py  test_ws_control.py
